# freecad.ship

./: .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  package.xml  setup.py
.spyproject/config/: workspace.ini
freecad.ship.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
freecad/ship/: CMakeLists.txt  Instance.py  Ship.py  ShipGui.py  Ship_rc.py  TankInstance.py  WeightInstance.py  compile_resources.py  init_gui.py
freecad/ship/resistanceAmadeo/: Amadeo.py  PlotAux.py  Preview.py  TaskPanel.py  Tools.py  __init__.py
freecad/ship/resistanceBlountFox/: BlountFox.py  PlotAux.py  TaskPanel.py
freecad/ship/resistanceHoltrop/: Holtrop.py  PlotAux.py  TaskPanel.py  __init__.py
freecad/ship/resistanceSavitsky/: PlotAux.py  Savitsky.py  TaskPanel.py
freecad/ship/resources/: Ship.qrc
freecad/ship/resources/examples/: s60.fcstd  s60_katamaran.fcstd  wigley.fcstd  wigley_katamaran.fcstd
freecad/ship/resources/translations/: README.md  Ship.ts  Ship_af.qm  Ship_af.ts  Ship_ar.qm  Ship_ar.ts  Ship_be.qm  Ship_be.ts  Ship_bg.qm  Ship_bg.ts  Ship_ca.qm  Ship_ca.ts  Ship_cs.qm  Ship_cs.ts  Ship_da.qm  Ship_da.ts  Ship_de.qm  Ship_de.ts  Ship_el.qm  Ship_el.ts  Ship_es-AR.qm  Ship_es-AR.ts  Ship_es-ES.qm  Ship_es-ES.ts  Ship_eu.qm  Ship_eu.ts  Ship_fi.qm  Ship_fi.ts  Ship_fil.qm  Ship_fil.ts  Ship_fr.qm  Ship_fr.ts  Ship_gl.qm  Ship_gl.ts  Ship_hr.qm  Ship_hr.ts  Ship_hu.qm  Ship_hu.ts  Ship_id.qm  Ship_id.ts  (+49 more)
freecad/ship/seakeepingRAOs/: PlotAux.py  TaskPanel.py  Tools.py
freecad/ship/seakeepingSetMesh/: TaskPanel.py
freecad/ship/shipAreasCurve/: PlotAux.py  Preview.py  TaskPanel.py
freecad/ship/shipCapacityCurve/: PlotAux.py  TaskPanel.py  Tools.py
freecad/ship/shipCreateLoadCondition/: Tools.py  __init__.py
freecad/ship/shipCreateShip/: Preview.py  TaskPanel.py  Tools.py
freecad/ship/shipCreateTank/: TaskPanel.py  Tools.py
freecad/ship/shipCreateWeight/: TaskPanel.py  Tools.py
freecad/ship/shipGZ/: PlotAux.py  TaskPanel.py  Tools.py
freecad/ship/shipHydrostatics/: PlotAux.py  TaskPanel.py  Tools.py
freecad/ship/shipLoadExample/: TaskPanel.py
freecad/ship/shipOutlineDraw/: Preview.py  TaskPanel.py
freecad/ship/shipSinkAndTrim/: TaskPanel.py  Tools.py
freecad/ship/shipUtils/: LoadCondition.py  Locale.py  Math.py  Paths.py  Selection.py  Serialize.py  Units.py  __init__.py
(+16 files in other folders)
