<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Ship Workbench</name>
  <description>Naval ship design (architecture, seakeeping, and ship resistance)</description>
  <version></version>
  <date></date>
  <maintainer email="jlcercos@gmail.com">Jose Luis Cercós Pita</maintainer>
  <license file="LICENSE">LGPLv2.1</license>
  <url type="repository" branch="master">https://github.com/FreeCAD/freecad.ship</url>
  <url type="bugtracker">https://github.com/FreeCAD/freecad.ship/issues</url>
  <url type="documentation">https://wiki.freecad.org/Ship_Workbench</url>

  <icon>freecad/ship/resources/icons/Ship_Logo.svg</icon>

  <content>
    <workbench>
      <name>Ship Workbench</name>
      <!-- <classname>MetadataCreationWorkbench</classname> -->
      <!-- <subdirectory>MCW</subdirectory> -->
      <!-- <icon>Resources/mcw.svg</icon> -->
      <depend>plot</depend>  <!-- Python package dependencies (no support for version information) -->
      <tag>ship</tag>
      <tag>naval</tag>
      <tag>fem</tag>
    </workbench>
  </content>

</package>