<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Ship Workbench</name>
  <description>Naval ship design (architecture, seakeeping, and ship resistance)</description>
  <version>2024.10.23</version>
  <date>2024-10-23</date>
  <maintainer email="jlcercos@gmail.com">Jose Luis Cercós Pita</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="master">https://github.com/FreeCAD/freecad.ship</url>
  <url type="bugtracker">https://github.com/FreeCAD/freecad.ship/issues</url>
  <url type="documentation">https://wiki.freecad.org/Ship_Workbench</url>

  <icon>freecad/ship/resources/icons/Ship_Logo.svg</icon>

  <content>
    <workbench>
      <name>Ship Workbench</name>
      <classname>ShipWorkbench</classname>
      <subdirectory>./</subdirectory>
      <icon>freecad/ship/resources/icons/Ship_Logo.svg</icon>
      <depend>capytaine</depend>
      <depend>plot</depend>
      <tag>ship</tag>
      <tag>naval</tag>
      <tag>fem</tag>
    </workbench>
  </content>

</package>
